--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -4,6 +4,7 @@
 <script src="js/jquery.ajaxchimp.min.js"></script>
 <script src="js/mail-script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
 <script src="js/main.js"></script>
 <script>
   let spinLeft = 1;
