change nav link

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -35,7 +35,7 @@
             <li
               class="nav-item <%= typeof tab === 'undefined' || tab === 1 ? 'active' : '' %>"
             >
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="http://antal-id.site">Home</a>
             </li>
             <li
               class="nav-item <%= typeof tab !== 'undefined' && tab === 2 ? 'active' : '' %>"
