--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -21,15 +21,15 @@
   content="a-wp7FnY7qKAqibke9EsX35O9yU_b8RmyBjifzq6EZo"
 />
 
-<link rel="icon" href="img/logo.png" type="image/png" />
+<link rel="icon" href="/img/logo.png" type="image/png" />
 
-<link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css" />
-<link rel="stylesheet" href="vendors/themify-icons/themify-icons.css" />
-<link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css" />
-<link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css" />
+<link rel="stylesheet" href="/vendors/bootstrap/bootstrap.min.css" />
+<link rel="stylesheet" href="/vendors/themify-icons/themify-icons.css" />
+<link rel="stylesheet" href="/vendors/owl-carousel/owl.theme.default.min.css" />
+<link rel="stylesheet" href="/vendors/owl-carousel/owl.carousel.min.css" />
 
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/fonts.css" />
+<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" href="/css/fonts.css" />
 
 <script
   src="https://kit.fontawesome.com/63330c0949.js"
@@ -67,5 +67,10 @@
     background: cornflowerblue;
     color: white;
     margin-right: 0.5rem;
+  }
+
+  .card-img {
+    height: 220px;
+    object-fit: cover;
   }
 </style>
