--- a/views/blog-index.ejs
+++ b/views/blog-index.ejs
@@ -44,34 +44,32 @@
             <div class="blog_left_sidebar">
               <article class="blog_item">
                 <div class="blog_item_img">
-                  <img
-                    class="card-img rounded-0"
-                    src="img/blog/main-blog/m-blog-1.jpg"
-                    alt=""
-                  />
-                  <a href="#" class="blog_item_date">
-                    <h3>15</h3>
-                    <p>Jan</p>
+                  <a href="/blog/3">
+                    <img
+                      class="card-img rounded-0"
+                      src="img/blog/blog_4.jpg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="/blog/3" class="blog_item_date">
+                    <h3>29</h3>
+                    <p>Oct</p>
                   </a>
                 </div>
 
                 <div class="blog_details">
-                  <a class="d-inline-block" href="single-blog.html">
-                    <h2>Google inks pact for new 35-storey office</h2>
+                  <a class="d-inline-block" href="/blog/3">
+                    <h2>
+                      Buat apa sih naik Angkutan umum (Angkot)? Ada Banyak lho
+                      Keuntungannya... (No. 3 benefit banget deh!)
+                    </h2>
                   </a>
                   <p>
-                    That dominion stars lights dominion divide years for fourth
-                    have don't stars is that he earth it first without heaven in
-                    place seed it second morning saying.
+                    Hal yang paling sering kita jumpai di kota kota besar adalah
+                    kondisi lalu lintas yang sering terjadi kemacetan, dan kota
+                    Medan juga menjadi salah satu yang termasuk di dalamnya.
+                    Kemacetan...
                   </p>
-                  <ul class="blog-info-link">
-                    <li>
-                      <a href="#"><i class="ti-user"></i> Travel, Lifestyle</a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="ti-comments"></i> 03 Comments</a>
-                    </li>
-                  </ul>
                 </div>
               </article>
             </div>
@@ -81,34 +79,67 @@
             <div class="blog_left_sidebar">
               <article class="blog_item">
                 <div class="blog_item_img">
-                  <img
-                    class="card-img rounded-0"
-                    src="img/blog/main-blog/m-blog-1.jpg"
-                    alt=""
-                  />
-                  <a href="#" class="blog_item_date">
-                    <h3>15</h3>
-                    <p>Jan</p>
+                  <a href="/blog/2">
+                    <img
+                      class="card-img rounded-0"
+                      src="img/blog/blog_2.jpg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="/blog/2" class="blog_item_date">
+                    <h3>10</h3>
+                    <p>Oct</p>
                   </a>
                 </div>
 
                 <div class="blog_details">
-                  <a class="d-inline-block" href="single-blog.html">
-                    <h2>Google inks pact for new 35-storey office</h2>
+                  <a class="d-inline-block" href="/blog/2">
+                    <h2>
+                      7 Tips dan Trik untuk naik Angkot Sekarang yang
+                      Menyeramkan! (Nomor 6 mindblowing banget lho!)
+                    </h2>
                   </a>
                   <p>
-                    That dominion stars lights dominion divide years for fourth
-                    have don't stars is that he earth it first without heaven in
-                    place seed it second morning saying.
+                    Sekarang ini, angkot biasanya dinilai tidak aman dan bahkan
+                    menyeramkan bagi banyak masyarakat. Salah satu penyebabnya
+                    yaitu karena banyaknya tindakan kejahatan yg sering terjadi
+                    di dalam angkot...
                   </p>
-                  <ul class="blog-info-link">
-                    <li>
-                      <a href="#"><i class="ti-user"></i> Travel, Lifestyle</a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="ti-comments"></i> 03 Comments</a>
-                    </li>
-                  </ul>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mb-5 mb-lg-0">
+            <div class="blog_left_sidebar">
+              <article class="blog_item">
+                <div class="blog_item_img">
+                  <a href="/blog/1">
+                    <img
+                      class="card-img rounded-0"
+                      src="img/blog/blog_3.jpg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="/blog/1" class="blog_item_date">
+                    <h3>2</h3>
+                    <p>Oct</p>
+                  </a>
+                </div>
+
+                <div class="blog_details">
+                  <a class="d-inline-block" href="/blog/1">
+                    <h2>
+                      5 Perbedaan Antal dengan Angkot Konvensional (No. 4 kamu
+                      enggak nyangka deh!)
+                    </h2>
+                  </a>
+                  <p>
+                    Angkot, sebuah sebutan yang diberikan kepada angkotan kota
+                    di Indonesia. Angkot merupakan kendaraan di masa lalu yang
+                    masih bertahan sampai saat ini, akan tetapi image angkot di
+                    mata...
+                  </p>
                 </div>
               </article>
             </div>
