--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
           class="navbar-brand logo_h d-flex align-items-center"
           href="index.html"
         >
-          <img src="img/logo.png" alt="" width="50" />
+          <img src="/img/logo.png" alt="" width="50" />
           <span
             style="color: white; font-size: 1.95rem; font-family: continuum_b;"
             class="ml-2"
