--- a/views/index.ejs
+++ b/views/index.ejs
@@ -228,10 +228,29 @@
               <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
                 <div class="card card-pricing">
                   <div class="blog-header">
-                    <img src="/img/blog/blog1.png" style="width: 100%;" />
+                    <img src="/img/blog/blog_1.jpg" style="width: 100%;" />
                   </div>
                   <div class="p-4">
-                    <p class="mt-2">October 12, 2019 by Admin</p>
+                    <p class="mt-2">October 29, 2019 by Admin</p>
+                    <a href="#"
+                      ><h4>
+                        Buat apa sih naik Angkot? Banyak lho Keuntungannya...
+                        (No. 3 benefit banget deh!)
+                      </h4></a
+                    >
+                    <a href="#">Read more...</a>
+                    <br />
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
+                <div class="card card-pricing">
+                  <div class="blog-header">
+                    <img src="/img/blog/blog_4.jpg" style="width: 100%;" />
+                  </div>
+                  <div class="p-4">
+                    <p class="mt-2">October 10, 2019 by Admin</p>
                     <a href="#"
                       ><h4>
                         7 Tips dan Trik untuk naik Angkot Sekarang yang
@@ -248,34 +267,14 @@
               <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
                 <div class="card card-pricing">
                   <div class="blog-header">
-                    <img src="/img/blog/blog1.png" style="width: 100%;" />
+                    <img src="/img/blog/blog_3.jpg" style="width: 100%;" />
                   </div>
                   <div class="p-4">
-                    <p class="mt-2">October 12, 2019 by Admin</p>
+                    <p class="mt-2">October 2, 2019 by Admin</p>
                     <a href="#"
                       ><h4>
-                        7 Tips dan Trik untuk naik Angkot Sekarang yang
-                        Menyeramkan! (Nomor 6 mindblowing banget lho!)
-                      </h4></a
-                    >
-
-                    <a href="#">Read more...</a>
-                    <br />
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
-                <div class="card card-pricing">
-                  <div class="blog-header">
-                    <img src="/img/blog/blog1.png" style="width: 100%;" />
-                  </div>
-                  <div class="p-4">
-                    <p class="mt-2">October 12, 2019 by Admin</p>
-                    <a href="#"
-                      ><h4>
-                        7 Tips dan Trik untuk naik Angkot Sekarang yang
-                        Menyeramkan! (Nomor 6 mindblowing banget lho!)
+                        5 Perbedaan Antal dengan Angkot Konvensional (No. 4 kamu
+                        enggak nyangka deh!)
                       </h4></a
                     >
 
