--- a/views/blog-1.ejs
+++ b/views/blog-1.ejs
@@ -4,15 +4,18 @@
     <% include partials/head.ejs %>
     <!-- SEO -->
     <title>
-      Antal •⁠ Alat Transportasi Angkot Online dengan Harga Murah, Kenyamanan,
-      dan Kebersamaan
+      Antal •⁠ 5 Perbedaan Antal dengan Angkot Konvensional (No. 4 kamu enggak
+      nyangka deh!)
     </title>
     <meta
       name="description"
-      content="Sebuah layanan transportasi online yang mengutilisasi angkot di Indonesia. Mengutamakan kenyamanan, tarif murah, dan kebersamaan"
+      content="Angkot, sebuah sebutan yang diberikan kepada angkotan kota di
+      Indonesia. Angkot merupakan kendaraan di masa lalu yang masih
+      bertahan sampai saat ini, akan tetapi image angkot di mata
+      masyarakat tidak seperti yang diharapkan."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="http://antal-id.site/" />
+    <link rel="canonical" href="http://blog.antal-id.site/blog/1" />
   </head>
   <body>
     <!--================ Header Menu Area start =================-->
