--- a/views/blog-2.ejs
+++ b/views/blog-2.ejs
@@ -4,15 +4,18 @@
     <% include partials/head.ejs %>
     <!-- SEO -->
     <title>
-      Antal •⁠ Alat Transportasi Angkot Online dengan Harga Murah, Kenyamanan,
-      dan Kebersamaan
+      Antal •⁠ 7 Tips dan Trik untuk naik Angkot Sekarang yang Menyeramkan!
+      (Nomor 6 mindblowing banget lho!)
     </title>
     <meta
       name="description"
-      content="Sebuah layanan transportasi online yang mengutilisasi angkot di Indonesia. Mengutamakan kenyamanan, tarif murah, dan kebersamaan"
+      content="Sekarang ini, angkot biasanya dinilai tidak aman dan bahkan
+      menyeramkan bagi banyak masyarakat. Salah satu penyebabnya
+      yaitu karena banyaknya tindakan kejahatan yg sering terjadi di
+      dalam angkot."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="http://antal-id.site/" />
+    <link rel="canonical" href="http://blog.antal-id.site/blog/2" />
   </head>
   <body>
     <!--================ Header Menu Area start =================-->
