--- a/views/blog-3.ejs
+++ b/views/blog-3.ejs
@@ -4,15 +4,17 @@
     <% include partials/head.ejs %>
     <!-- SEO -->
     <title>
-      Antal •⁠ Alat Transportasi Angkot Online dengan Harga Murah, Kenyamanan,
-      dan Kebersamaan
+      Antal •⁠ Buat apa sih naik Angkutan umum (Angkot)? Ada Banyak lho
+      Keuntungannya... (No. 3 benefit banget deh!)
     </title>
     <meta
       name="description"
-      content="Sebuah layanan transportasi online yang mengutilisasi angkot di Indonesia. Mengutamakan kenyamanan, tarif murah, dan kebersamaan"
+      content="Hal yang paling sering kita jumpai di kota kota besar adalah
+      kondisi lalu lintas yang sering terjadi kemacetan, dan kota
+      Medan juga menjadi salah satu yang termasuk di dalamnya."
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="http://antal-id.site/" />
+    <link rel="canonical" href="http://blog.antal-id.site/blog/3" />
   </head>
   <body>
     <!--================ Header Menu Area start =================-->
