--- a/views/blog-index.ejs
+++ b/views/blog-index.ejs
@@ -4,15 +4,14 @@
     <% include partials/head.ejs %>
     <!-- SEO -->
     <title>
-      Antal •⁠ Alat Transportasi Angkot Online dengan Harga Murah, Kenyamanan,
-      dan Kebersamaan
+      Antal Blogs •⁠ Blog Seputar Angkot
     </title>
     <meta
       name="description"
-      content="Sebuah layanan transportasi online yang mengutilisasi angkot di Indonesia. Mengutamakan kenyamanan, tarif murah, dan kebersamaan"
+      content="Blog Seputar Angkot, Berita serta Tips & Trik seputaran Angkot"
     />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="http://antal-id.site/" />
+    <link rel="canonical" href="http://blog.antal-id.site/" />
   </head>
   <body>
     <!--================ Header Menu Area start =================-->
