--- a/views/blog-index.ejs
+++ b/views/blog-index.ejs
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <section id="blog_area" class="blog_area section-margin mt-4">
+    <section id="blog_area" class="blog_area section-margin mt-4 mb-0">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
@@ -146,6 +146,14 @@
         </div>
       </div>
     </section>
+
+    <div class="container mt-4">
+      <div class="">
+        <a class="button" href="http://antal-id.site">&lt; Home</a>
+      </div>
+      <br />
+    </div>
+
     <!-- ================ start footer Area ================= -->
     <footer class="footer-area section-gap">
       <div class="container">
