--- a/views/blog-1.ejs
+++ b/views/blog-1.ejs
@@ -127,6 +127,10 @@
                 </p>
               </div>
             </div>
+            <br />
+            <div class="">
+              <a class="button" href="/">&lt; Blogs</a>
+            </div>
           </div>
         </div>
       </div>
