--- a/views/blog-3.ejs
+++ b/views/blog-3.ejs
@@ -166,6 +166,10 @@
                 </p>
               </div>
             </div>
+            <br />
+            <div class="">
+              <a class="button" href="/">&lt; Blogs</a>
+            </div>
           </div>
         </div>
       </div>
