--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
       <div class="container box_1620">
         <a
           class="navbar-brand logo_h d-flex align-items-center"
-          href="index.html"
+          href="http://antal-id.site"
         >
           <img src="/img/logo.png" alt="" width="50" />
           <span
