--- a/views/index.ejs
+++ b/views/index.ejs
@@ -228,17 +228,17 @@
               <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
                 <div class="card card-pricing">
                   <div class="blog-header">
-                    <img src="/img/blog/blog_1.jpg" style="width: 100%;" />
+                    <img src="/img/blog/blog_4.jpg" style="width: 100%;" />
                   </div>
                   <div class="p-4">
                     <p class="mt-2">October 29, 2019 by Admin</p>
-                    <a href="#"
+                    <a href="http://blog.antal-id.site/blog/3"
                       ><h4>
                         Buat apa sih naik Angkot? Banyak lho Keuntungannya...
                         (No. 3 benefit banget deh!)
                       </h4></a
                     >
-                    <a href="#">Read more...</a>
+                    <a href="http://blog.antal-id.site/blog/3">Read more...</a>
                     <br />
                   </div>
                 </div>
@@ -247,18 +247,18 @@
               <div class="col-sm-6 col-lg-4 mb-4 mb-lg-0">
                 <div class="card card-pricing">
                   <div class="blog-header">
-                    <img src="/img/blog/blog_4.jpg" style="width: 100%;" />
+                    <img src="/img/blog/blog_1.jpg" style="width: 100%;" />
                   </div>
                   <div class="p-4">
                     <p class="mt-2">October 10, 2019 by Admin</p>
-                    <a href="#"
+                    <a href="http://blog.antal-id.site/blog/2"
                       ><h4>
                         7 Tips dan Trik untuk naik Angkot Sekarang yang
                         Menyeramkan! (Nomor 6 mindblowing banget lho!)
                       </h4></a
                     >
 
-                    <a href="#">Read more...</a>
+                    <a href="http://blog.antal-id.site/blog/2">Read more...</a>
                     <br />
                   </div>
                 </div>
@@ -271,14 +271,14 @@
                   </div>
                   <div class="p-4">
                     <p class="mt-2">October 2, 2019 by Admin</p>
-                    <a href="#"
+                    <a href="http://blog.antal-id.site/blog/1"
                       ><h4>
                         5 Perbedaan Antal dengan Angkot Konvensional (No. 4 kamu
                         enggak nyangka deh!)
                       </h4></a
                     >
 
-                    <a href="#">Read more...</a>
+                    <a href="http://blog.antal-id.site/blog/1">Read more...</a>
                     <br />
                   </div>
                 </div>
