--- a/views/index.ejs
+++ b/views/index.ejs
@@ -290,8 +290,8 @@
     </section>
     <!--================ Price Table section end =================-->
 
-    <!--================ Service section start =================-->
-    <section id="service_section" class="section-margin mb-5 pt-xl-235">
+    <!--================ Fortune Wheel section start =================-->
+    <!-- <section id="service_section" class="section-margin mb-5 pt-xl-235">
       <div class="container">
         <div class="section-intro pb-85px text-center">
           <h2>Get Free Vouchers Now!</h2>
@@ -347,7 +347,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!--================ Service section end =================-->
 
     <!--================ Subscribe section start =================-->
