--- a/views/index.ejs
+++ b/views/index.ejs
@@ -291,7 +291,7 @@
     <!--================ Price Table section end =================-->
 
     <!--================ Fortune Wheel section start =================-->
-    <!-- <section id="service_section" class="section-margin mb-5 pt-xl-235">
+    <section id="service_section" class="section-margin mb-5 pt-xl-235">
       <div class="container">
         <div class="section-intro pb-85px text-center">
           <h2>Get Free Vouchers Now!</h2>
@@ -302,7 +302,7 @@
             <div
               class="d-flex align-items-center justify-content-center"
               id="canvas_container"
-            ></div>
+            ><p>Loading...</p></div>
             <p id="canvas_info" class="text-center mt-2"></p>
           </div>
           <div class="col-lg-6 col-sm-12 mt-1">
@@ -347,7 +347,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!--================ Service section end =================-->
 
     <!--================ Subscribe section start =================-->
