--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -6,4 +6,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
 <script src="js/main.js"></script>
-<!-- <script src="js/wheel.js"></script> -->
+<script src="js/wheel.js"></script>
