--- a/views/blog-index.ejs
+++ b/views/blog-index.ejs
@@ -43,6 +43,41 @@
             <div class="blog_left_sidebar">
               <article class="blog_item">
                 <div class="blog_item_img">
+                  <a href="/blog/4">
+                    <img
+                      class="card-img rounded-0"
+                      src="img/blog/blog_1.jpg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="/blog/4" class="blog_item_date">
+                    <h3>2</h3>
+                    <p>Nov</p>
+                  </a>
+                </div>
+
+                <div class="blog_details">
+                  <a class="d-inline-block" href="/blog/4">
+                    <h2>
+                      Banyak Kemacetan di setiap kota-kota besar, Angkutan Umum
+                      sangatlah Dibutuhkan!
+                    </h2>
+                  </a>
+                  <p>
+                    Mobilitas memang salah satu hal terpenting dalam kehidupan
+                    kota. Ini kebutuhan pokok penduduknya, menentukan efisiensi
+                    ekonomi dan sosialitasnya. Mobilitas horizontal di ruang
+                    fisik kota...
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mb-5 mb-lg-0">
+            <div class="blog_left_sidebar">
+              <article class="blog_item">
+                <div class="blog_item_img">
                   <a href="/blog/3">
                     <img
                       class="card-img rounded-0"
